--- a/UserProfile.html
+++ b/UserProfile.html
@@ -88,6 +88,14 @@
                     document.getElementById('botones').innerHTML = ''
                 }
             )
+            window.addEventListener("keydown", function (event) {console.log(event)
+                if(event.keyCode == 27) {
+                    document.getElementsByClassName('fondo_transparente')[0].style.display = 'none'
+                    document.getElementById('contenidomodal').innerHTML = ''
+                    document.getElementById('botones').innerHTML = ''
+                }
+            },false);
+
         </script>
     </body>
 </html>
