restructure key event

--- a/UserProfile.html
+++ b/UserProfile.html
@@ -90,7 +90,7 @@
             )
             window.addEventListener(
                 'keydown',
-                function (event) {console.log(event)
+                function (event) {
                     if(event.keyCode == 27) {
                         document.getElementsByClassName('fondo_transparente')[0].style.display = 'none'
                         document.getElementById('contenidomodal').innerHTML = ''
