--- a/Login.html
+++ b/Login.html
@@ -32,4 +32,15 @@
         </div>
     </body>
     <script src="./Js/Script.js"></script>
+    <script>
+        window.addEventListener(
+            'keydown',
+            function (event) {
+                if(event.keyCode == 13) {
+                    login()
+                }
+            },
+            false
+        )
+    </script>
 </html>
