--- a/Signin.html
+++ b/Signin.html
@@ -49,4 +49,15 @@
         </div>
     </body>
     <script src="./Js/Script.js"></script>
+    <script>
+        window.addEventListener(
+            'keydown',
+            function (event) {
+                if(event.keyCode == 13) {
+                    signin()
+                }
+            },
+            false
+        )
+    </script>
 </html>
