resize fonts, resize graphviz graphs

--- a/AdminProfile.html
+++ b/AdminProfile.html
@@ -50,8 +50,8 @@
                     <button type="button" onclick="chargeUsers()">Cargar Usuarios</button>
                 </div>
                 <h3>Clientes</h3>
-                <div id="listoflists" style="width: auto;padding: 2rem;"></div>
-                <script>listOfLists(1150)</script>
+                <div class="binarytreeAdmin" style="width: auto;padding: 2rem;"><div id="listoflists"></div></div>
+                <script>listOfLists()</script>
             </div>
             <div id="authors" class="authors">
                 <h2>Carga Masiva de Autores</h2>
@@ -64,8 +64,8 @@
                     <button type="button" onclick="chargeAuthors()">Cargar Autores</button>
                 </div>
                 <h3>Autores</h3>
-                <div id="binarytree" style="width: auto;padding: 2rem;"></div>
-                <script>binaryTree(1150)</script>
+                <div class="binarytreeAdmin" style="width: auto;padding: 2rem;"><div id="binarytree"></div></div>
+                <script>binaryTree(500)</script>
             </div>
             <div id="books" class="books">
                 <h2>Carga Masiva de Libros</h2>
