resize cards books

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div id="users" class="authors">
                 <h2>Top Usuarios con más Compras</h2>
                 <div id="topcom" class="mosaicotop"></div>
-                <div id="doubleList" style="width: auto;padding: 2rem;"></div>
+                <div id="doubleList" style="width: auto;padding-top: 2rem;"></div>
                 <script>getTop()</script>
                 <script>doubleList()</script>
             </div>
