--- a/AdminProfile.html
+++ b/AdminProfile.html
@@ -50,7 +50,7 @@
                     <button type="button" onclick="chargeUsers()">Cargar Usuarios</button>
                 </div>
                 <h3>Clientes</h3>
-                <div class="binarytreeAdmin" style="width: auto;padding: 2rem;"><div id="listoflists"></div></div>
+                <div class="binarytreeAdmin"><div id="listoflists"></div></div>
                 <script>listOfLists()</script>
             </div>
             <div id="authors" class="authors">
@@ -64,7 +64,7 @@
                     <button type="button" onclick="chargeAuthors()">Cargar Autores</button>
                 </div>
                 <h3>Autores</h3>
-                <div class="binarytreeAdmin" style="width: auto;padding: 2rem;"><div id="binarytree"></div></div>
+                <div class="binarytreeAdmin"><div id="binarytree"></div></div>
                 <script>binaryTree(500)</script>
             </div>
             <div id="books" class="books">
