cola de espera barra admin

--- a/AdminProfile.html
+++ b/AdminProfile.html
@@ -32,6 +32,7 @@
                         <a class="navegacion__enlace" onclick="header()">Carga de Usuarios</a>
                         <a class="navegacion__enlace" onclick="chargeOfAuthors()">Carga de Autores</a>
                         <a class="navegacion__enlace" onclick="chargeOfBooks()">Carga de Libros</a>
+                        <a class="navegacion__enlace" onclick="">Cola de Espera</a>
                         <a class="navegacion__enlace" href="./AdminProfile.html">Cerrar Sesión</a>
                     </nav>
                     <script>getNameAdmin()</script>
