complete script, user guide

--- a/AdminProfile.html
+++ b/AdminProfile.html
@@ -83,7 +83,9 @@
             </div>
             <div id="queue" class="books">
                 <h2>Cola de Espera</h2>
+                <div id="waitQueueBuyH" class="mosaico" style="width: 100%"></div>
                 <div id="waitQueueBuyG" style="width: 100%"></div>
+                <script>lookQueueAdmin()</script>
                 <script>queueBuys()</script>
             </div>
         </div>
