--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <script src="https://unpkg.com/@hpcc-js/wasm@0.3.11/dist/index.min.js"></script>
         <script src="https://unpkg.com/d3-graphviz@3.0.5/build/d3-graphviz.js"></script>
         <script src="./Js/Script.js"></script>
+        <script src="./Js/Init.js"></script>
     </head>
     <body>
         <header id="header" class="header">
